--- a/about.html
+++ b/about.html
@@ -21,10 +21,12 @@
                     <li><a href="contact.html">Contact</a></li>         
                 </ul>
               </div>
-              <i class="fas fa-times" onclick="showmenu()"></i>
+                <i class="fas fa-times" onclick="showmenu()"></i>
+              <div>
             </nav> 
-          </section>  
-          
+          </section>
+ 
+
           <script>
             var navlinks = document.getElementById("navLinks")
 
@@ -36,6 +38,7 @@
             }
 
           </script>
+
 
             <div class="box">
               <h1>What is my research about ?</h1>
