--- a/Projects.html
+++ b/Projects.html
@@ -4,7 +4,6 @@
           <title>Home</title>
             <meta name="viewport" content="width=device-width, initial-scale=1">
             <link rel="stylesheet"  href="main.css">
-
             <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.12.1/css/all.min.css">
         </head>
 
@@ -34,34 +33,37 @@
                 <div class="Card-Container">
                     <div class="boxs">
                         <div class="box-img">
-                            <div class="name">java</div>
-                                <img src="pics/a116b24cb067dd9ee6ce98f2bdbf38ca.jpg">
+                            <div class="name">Java calculator</div>
+                                <img src="pics/Projects/a116b24cb067dd9ee6ce98f2bdbf38ca.jpg">
                             </div>
                             <div class="box-text">
-                                <a href="#"> click here to see the source code </a>	
+                                <a href="https://code.sololearn.com/ca13a18A67A1"> click here to see the source code </a>	
                             </div>
                         </div>
 
                         <div class="boxs">
                             <div class="box-img">
-                                 <div class="name">c++</div>
-                                        <img src="pics/image-from-rawpixel-id-2941854-jpeg.jpg">
+                                 <div class="name">C++ test scores</div>
+                                        <img src="pics/Projects/image-from-rawpixel-id-2941854-jpeg.jpg">
                                  </div>
                                 <div class="box-text">
-                                    <a href="#">click here to see the source code</a>	
+                                    <a href="https://code.sololearn.com/cA90A7149a21">click here to see the source code</a>	
                                 </div>
                             </div>
 
-                            <div class="boxs">  
-                                <div class="box-img">
-                                <div class="name">Python</div>
-                                <img src="pics/cointoss.jpg">
-                            </div>
-                        <div class="box-text">
-                            <a href="#">click here to see the source code.</a>	
+                          <div class="boxs">  
+                             <div class="box-img">
+                                <div class="name">Python "fizz buzz"</div>   
+                                 <img src="pics/projects/cointoss.jpg">       
+                                </div>
+                                <div class="box-text">
+                                    <a href="https://code.sololearn.com/c1A20A15a21a">click here to see the source code.</a>	
+                                </div>
+                             </div>
+                          </div> 
                         </div>
                     </div>
-                </div>
+                </div>   
 
             </section>
         </body>
