--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
             <section class="header">
                 <nav>
                   <a href="index.html">Home</a>
-                  <div class="nav-links" >
+                  <div class="nav-links">
                     <ul>
                         <li><a href="index.html" >Home</a></li>
                         <li><a href="about.html">About</a></li>
@@ -28,19 +28,19 @@
                 <!-- Full-width images with number and caption text -->
                 <div class="mySlides fade">
                   <div class="numbertext">1 / 3</div>
-                    <img src="pics/pexels-pixabay-355566.jpg" style="width:100%">
+                    <img src="pics/home/pexels-pixabay-355566.jpg" style="width:100%">
                   <div class="text">Photo by Pexels</div>
                 </div>
 
                 <div class="mySlides fade">
                   <div class="numbertext">2 / 3</div>
-                    <img src="pics/pexels-dianne-230629.jpg" style="width:100%">
+                    <img src="pics/home/pexels-dianne-230629.jpg" style="width:100%">
                   <div class="text">Photo by Dianne from Pexels</div>
                 </div>
 
                 <div class="mySlides fade">
                   <div class="numbertext">3 / 3</div>
-                    <img src="pics/pexels-johannes-plenio-3107624.jpg" style="width:100%">
+                    <img src="pics/home/pexels-johannes-plenio-3107624.jpg" style="width:100%">
                   <div class="text">Photo by Johannes Plenio from Pexels</div>
                 </div>
 
@@ -49,11 +49,7 @@
                 <a class="next" onclick="plusSlides(1)">&#10095;</a>
               </div>
 
-              <div class="scrolldown">
-                <span></span>
-                <span></span>
-                <span></span>
-              </div>
+              
 
               <!-- The dots/circles -->
               <div style="text-align:center">
@@ -65,17 +61,19 @@
               <script src="main.js"></script>
 
             <!--home-->
-              <section class="Home">
+              <section class="home" id="home">
    
-                  <div class="row">
-                      <div class="Home-content">
+                  <div class="h-row">
+                      <div class="Home-row">
                         <h2>Hi, I'm Areli !</h2>
                               <p>I am currently studying at Towson University located in Baltimore. I am also working with my 
                               mentor Dr.Dehlinger through a program called LSAMP.</p>     
                       </div>
 
-                          <div class="pic-content">  
-                            <img src="pics/areli.jpg" style="width:300px;height:480px;">      
+                          <div class="Home-row">  
+                            <div class="img">
+                              <img src="pics/home/areli.jpg" style="width:300px;height:480px;"> 
+                            </div>     
                           </div>
                     </div>
               </section>           
