--- a/about.html
+++ b/about.html
@@ -80,14 +80,15 @@
               <div class="col-md-6">
                 <div class="pray">
                    <img src = "pics/about/pexels-los-muertos-crew-7616841.jpg" style="width: 360px;height:500px;">
-                   <p>Photo by cottonbro from Pexels</p>
+                   <p>Photo by los muertos crew from Pexels</p>
                 </div>
               </div>
             
                   <div class="Home-content">
                     <h2>Researching websites</h2>
                           <p> While researching websites and researching UI/UX design concepts (e.g., segmentation, interactivity) and how they are utilized in web applications. I then 
-                            understood web application content organization</p>     
+                            understood web application content organization
+                          </p>     
                   </div>   
             </div>
           </div> 
@@ -103,7 +104,8 @@
               </div>
 
                 <div class="pic-content">  
-                  <img src="pics/about/pexels-sora-shimazaki-5926370.jpg" style="width: 360px;height:500px;">      
+                  <img src="pics/about/pexels-sora-shimazaki-5926370.jpg" style="width: 360px;height:500px;">
+                  <p>Photo by Sora Shimazaki from Pexels</p>      
                 </div>
           </div>
         </section>
@@ -114,7 +116,7 @@
               <div class="col-md-6">
                 <div class="pray">
                    <img src = "pics/about/pexels-isabella-mendes-4067506.jpg" style="width: 360px;height:500px;">
-                   <p>Photo by cottonbro from Pexels</p>
+                   <p>Photo by Isabella Mendes from Pexels</p>
                 </div>
               </div>
             
