--- a/index.html
+++ b/index.html
@@ -60,18 +60,18 @@
 
               <script src="main.js"></script>
 
-            <!--home-->
-              <section class="home" id="home">
+            <!--info-->
+              <section class="infro" id="info">
    
-                  <div class="h-row">
-                      <div class="Home-row">
+                  <div class="row">
+                      <div class="info-row">
                         <h2>Hi, I'm Areli !</h2>
                               <p>I am currently studying at Towson University located in Baltimore. I am also working with my 
                               mentor Dr.Dehlinger through a program called LSAMP.</p>     
                       </div>
 
-                          <div class="Home-row">  
-                            <div class="img">
+                          <div class="info-row">  
+                            <div class="img-box">
                               <img src="pics/home/areli.jpg" style="width:300px;height:480px;"> 
                             </div>     
                           </div>
