--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
    
                   <div class="row">
                       <div class="info-row">
-                        <h2>Hi, I'm Areli !</h2>
+                        <h2>Hi, I'm Areli </h2>
                               <p>I am currently studying at Towson University located in Baltimore. I am also working with my 
                               mentor Dr.Dehlinger through a program called LSAMP.</p>     
                       </div>
