--- a/contact.html
+++ b/contact.html
@@ -37,7 +37,7 @@
                             <i class="fab fa-github"></i>
                             <span>
                                 <h2>Source Code</h2>
-                                <li><a href="https://arelimh.github.io/website/">GitHub</a></li>
+                                <li><a href="https://github.com/AreliMH/Modern-Web-Application">GitHub</a></li>
                             </span>
                         </div>
 
