--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                           <div class="info-row">  
                             <div class="img-box">
-                              <img src="pics/home/AreliSmile.jpg" style="width:270px;height:480px;"> 
+                              <img src="pics/home/Arelismile.jpg" style="width:250px;height:480px;"> 
                             </div>     
                           </div>
                     </div>
