--- a/index.html
+++ b/index.html
@@ -66,8 +66,8 @@
                   <div class="row">
                       <div class="info-row">
                         <h2>Hi, I'm Areli !</h2>
-                              <p>I am currently studying at Towson University located in Baltimore. I am also working with my 
-                              mentor Dr.Dehlinger through a program called LSAMP.</p>     
+                              <p>I am currently a rising sophomore studying computer science at Towson University located in Baltimore. 
+                                  Throughout this summer research, I've been mentored by Dr.Dehlinger through a program called LSAMP.</p>     
                       </div>
 
                           <div class="info-row">  
