--- a/about.html
+++ b/about.html
@@ -25,20 +25,20 @@
 
             <!--home--> 
 
-          <section class="section-1">
+          <section class="about-section">
 
             <div class="container text-center">
               <div class="row">
-                <div class="col-md-6">
-                  <div class="pray">
+                <div class="about-col">
+                  <div class="about">
                      <img src = "pics/about/pexels-djordje-petrovic-2102416.jpg" style="width: 360px;height:500px;">
                   </div>
                 </div>
 
-                  <div class="col-md-6">
+                  <div class="about-col">
                     <div class="panel text-left">
                       <h1>What's my research about ?</h1>
-                      <p class="pt-4">
+                      <p class="paragraph">
                         The goal of my research is to build a modern, responsive web application. In order to accomplish this, I needed an understanding of software engineering, scientific knowledge, and the tooling process.
                         In an effort to approach the project I develop and iterate web application prototypes using modern web development technologies. As well as researching existing web applications for software engineering research labs to derive site requirements and architecture.
                         And lastly by understanding how software development teams utilize software repositories.
@@ -77,8 +77,8 @@
         <section class="Home">
           <div class="container text-center">
             <div class="row">
-              <div class="col-md-6">
-                <div class="pray">
+              <div class="about-col">
+                <div class="about">
                    <img src = "pics/about/pexels-los-muertos-crew-7616841.jpg" style="width: 360px;height:500px;">
                    <p>Photo by los muertos crew from Pexels</p>
                 </div>
@@ -113,8 +113,8 @@
         <section class="Home">
           <div class="container text-center">
             <div class="row">
-              <div class="col-md-6">
-                <div class="pray">
+              <div class="about-col">
+                <div class="about">
                    <img src = "pics/about/pexels-isabella-mendes-4067506.jpg" style="width: 360px;height:500px;">
                    <p>Photo by Isabella Mendes from Pexels</p>
                 </div>
