--- a/contact.html
+++ b/contact.html
@@ -56,7 +56,7 @@
             <div class="footer-block">                    
                 <div class="footer">
            
-                          <a class="twitter-timeline" data-width="700" data-height="300" href="https://twitter.com/whomz_?ref_src=twsrc%5Etfw">Tweets by whomz_</a> 
+                          <a class="twitter-timeline" data-width="700" data-height="300" href="https://twitter.com/whomz_?ref_src=twsrc%5Etfw"></a> 
                         <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
             
                 </div>      
