--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
                  width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
             </section>
 
-            <section class="contact-us">
+            <section class="contact">
                         
                 <div class="col">
                     <div class="contact-col">
